plugins/qcheck-stm/test/test_without_sut_errors.expected
Error: The generated cmd type is empty.
File "test_without_sut.mli", line 8, characters 10-27:
8 | val add : int -> int -> int
              ^^^^^^^^^^^^^^^^^
Warning: Skipping add: functions with no SUT argument cannot be tested.
